# compiler-principle-project

./: CMakeLists.txt  DEFINITION_BNF.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/MyCompiler/: AbstractSyntaxTree.h  GrammarTable.h  LexicalAnalyzer.h  LexicalError.h  RecursiveDescentParser.h  SymbolType.h  SyntacticAnalyzer.h  SyntaxError.h  ThreeAddressCode.h  Token.h
include/MyCompiler/Util/: AstToYaml.h
src/MyCompiler/: AbstractSyntaxTree.cpp  GrammarTable.cpp  LexicalAnalyzer.cpp  LexicalError.cpp  RecursiveDescentParser.cpp  SyntacticAnalyzer.cpp  SyntaxError.cpp  ThreeAddressCode.cpp  Token.cpp
src/MyCompiler/Util/: AstToYaml.cpp
test/: testIdentifiersCounter.cpp  testIrGeneration.cpp  testLexicalAnalyzer.cpp  testRdCondParser.cpp  testRdExpParser.cpp  testRdExpSdt.cpp  testRecursiveDescentParser.cpp  testSyntacticAnalyzer.cpp  testTableDrivenParser.cpp
test/Cases/10_Compare_Fix/: 10_Compare_Fix.in  lexical_analyzer.out  recursive_descent_parser.out
test/Cases/11_Reverse_Fix/: 11_Reverse_Fix.in  lexical_analyzer.out  recursive_descent_parser.out
test/Cases/12_Expressions/: 12_Expressions.in  rd_exp_parser.out
test/Cases/13_Conditions/: 13_Conditions.in  rd_cond_parser.out
test/Cases/14_Calculator/: 14_Calculator.in  rd_exp_parser.out  rd_exp_sdt.out
test/Cases/15_ExpressionsWithVars/: 15_ExpressionsWithVars.in  ir_generation.out
test/Cases/1_Compare/: 1_Compare.in  identifiers_counter.out  lexical_analyzer.out
test/Cases/2_Reverse/: 2_Reverse.in  identifiers_counter.out  lexical_analyzer.out  recursive_descent_parser.err
test/Cases/3_Chaos/: 3_Chaos.in  identifiers_counter.out  recursive_descent_parser.err
test/Cases/4_Gcd/: 4_Gcd.in  identifiers_counter.out  lexical_analyzer.out  recursive_descent_parser.err
test/Cases/5_Unknown/: 5_Unknown.in  identifiers_counter.out  lexical_analyzer.out
test/Cases/6_Add/: 6_Add.in  identifiers_counter.out  lexical_analyzer.out  recursive_descent_parser.out
test/Cases/7_SortThree/: 7_SortThree.in  identifiers_counter.out  lexical_analyzer.out  recursive_descent_parser.out
test/Cases/8_Triangle/: 8_Triangle.in  identifiers_counter.out  lexical_analyzer.out  recursive_descent_parser.out
test/Cases/9_FullWidthSymbol/: 9_FullWidthSymbol.in  identifiers_counter.err  lexical_analyzer.out
